# src/app/shared/schema/student/profile/TranscriptSchema.ts
@@ -22,6 +22,16 @@ export const UploadTranscriptSchema = z.object({
     .refine((file) => file.size <= 2 * 1024 * 1024, {
       message: "File size must be less than 2MB",
     }),
+  semester: z.string().regex(/^([1-9]|1[0-2])$/, {
+    message: "Semester must be a number between 1 and 12",
+  }),
 } satisfies InferZodMap<UploadTranscriptRequest>);
 
 export type UploadTranscriptPayload = z.infer<typeof UploadTranscriptSchema>;
+export type PostTranscriptResponse =
+  paths["/students/transcript"]["post"]["responses"]["200"]["content"]["application/json"];
+
+export type GetTranscriptsResponse =
+  paths["/students/transcript"]["get"]["responses"]["200"]["content"]["application/json"];
+
+export type GetTranscriptsResponseData = GetTranscriptsResponse["data"];
